--- a/clusters/k8s-na/argo-applications/external-secrets.yaml
+++ b/clusters/k8s-na/argo-applications/external-secrets.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: external-secrets
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -8,7 +14,7 @@ spec:
   source:
     chart: external-secrets
     repoURL: https://charts.external-secrets.io
-    targetRevision: 0.9.11
+    targetRevision: 0.10.0
     helm:
       releaseName: external-secrets
   destination:
@@ -25,7 +31,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/ingtranet/argocd-manifests.git
-    path: external-secrets-configs
+    path: manifests/external-secrets-configs
     targetRevision: HEAD
     directory:
       recurse: true
