--- a/clusters/k8s-na/argo-applications/nvidia-device-plugin.yaml
+++ b/clusters/k8s-na/argo-applications/nvidia-device-plugin.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: nvidia-device-plugin
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -8,7 +14,7 @@ spec:
   source:
     chart: nvidia-device-plugin
     repoURL: https://nvidia.github.io/k8s-device-plugin
-    targetRevision: 0.14.3
+    targetRevision: 0.16.2
     helm:
       releaseName: nvidia-device-plugin
       values: |
