--- a/clusters/k8s-na/argo-applications/traefik.yaml
+++ b/clusters/k8s-na/argo-applications/traefik.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: traefik
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -8,7 +14,7 @@ spec:
   source:
     chart: traefik
     repoURL: https://traefik.github.io/charts
-    targetRevision: 26.0.0
+    targetRevision: 30.0.0
     helm:
       releaseName: traefik
       values: |
@@ -40,7 +46,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/ingtranet/argocd-manifests.git
-    path: traefik-configs
+    path: manifests/traefik-configs
     targetRevision: HEAD
     directory:
       recurse: true
