--- a/clusters/k8s-na/argo-applications/metallb.yaml
+++ b/clusters/k8s-na/argo-applications/metallb.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: metallb
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -8,7 +14,7 @@ spec:
   source:
     chart: metallb
     repoURL: https://metallb.github.io/metallb
-    targetRevision: 0.13.12
+    targetRevision: 0.14.8
     helm:
       releaseName: metallb
   destination:
@@ -30,7 +36,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/ingtranet/argocd-manifests.git
-    path: metallb-configs
+    path: manifests/metallb-configs
     targetRevision: HEAD
     directory:
       recurse: true
