--- a/clusters/k8s-na/argo-applications/ollama.yaml
+++ b/clusters/k8s-na/argo-applications/ollama.yaml
@@ -1,3 +1,9 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: traefik
+
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -7,9 +13,10 @@ spec:
   project: default
   source:
     repoURL: https://github.com/ingtranet/argocd-manifests.git
-    path: ollama
+    path: manifests/ollama
     targetRevision: HEAD
     directory:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
+    namespace: ollama
