--- a/manifests/ollama/pv.yaml
+++ b/manifests/ollama/pv.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: ollama
+  annotations:
+    pv.kubernetes.io/provisioned-by: nfs.csi.k8s.io
 spec:
   capacity:
     storage: 500Gi
@@ -12,11 +14,13 @@ spec:
     - nfsvers=4.1
   csi:
     driver: nfs.csi.k8s.io
-    volumeHandle: "synology.dv.ingtra.net#volume1#k8s"
+    volumeHandle: "synology.dv.ingtra.net#volume1/k8s#na/nfs-csi/ollama#"
     volumeAttributes:
       server: synology.dv.ingtra.net
       share: /volume1/k8s
+      subDir: na/nfs-csi/ollama
   storageClassName: synology-nfs-csi
+
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
@@ -29,15 +33,3 @@ spec:
     requests:
       storage: 500Gi
   volumeName: ollama
-
----
-kind: PersistentVolumeClaim
-apiVersion: v1
-metadata:
-  name: test
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 500Gi
