--- a/manifests/ollama/deployment.yaml
+++ b/manifests/ollama/deployment.yaml
@@ -24,18 +24,18 @@ spec:
           env:
             - name: NVIDIA_VISIBLE_DEVICES
               value: "all"
-            - name: NVIDIA_REQUIRE_CUDA
-              value: "cuda>=12.0"
-            - name: LD_LIBRARY_PATH
-              value: /usr/local/cuda/lib:/usr/local/cuda/lib64:/usr/local/cuda/include
+            # - name: NVIDIA_REQUIRE_CUDA
+            #   value: "cuda>=12.0"
+            # - name: LD_LIBRARY_PATH
+            #   value: /usr/local/cuda/lib:/usr/local/cuda/lib64:/usr/local/cuda/include
             - name: OLLAMA_MODELS
               value: /ollama
-            - name: OLLAMA_LLM_LIBRARY
-              value: cuda_v12
+            # - name: OLLAMA_LLM_LIBRARY
+            #   value: cuda_v12
           volumeMounts:
-            - name: cuda-lib
-              mountPath: /usr/local/cuda
-              readOnly: true
+            # - name: cuda-lib
+            #   mountPath: /usr/local/cuda
+            #   readOnly: true
             - name: ollama
               mountPath: /ollama
           ports:
@@ -46,10 +46,10 @@ spec:
               cpu: "2"
               memory: "8Gi"
       volumes:
-        - name: cuda-lib
-          hostPath:
-            path: /usr/local/cuda
-            type: Directory
+        # - name: cuda-lib
+        #   hostPath:
+        #     path: /usr/local/cuda
+        #     type: Directory
         - name: ollama
           persistentVolumeClaim:
             claimName: ollama
