--- a/clusters/k8s-na/argo-applications/nriy.yaml
+++ b/clusters/k8s-na/argo-applications/nriy.yaml
@@ -1,22 +1,22 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: nriy
+  name: omniamni
 
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nriy
+  name: omniamni
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/ingtranet/argocd-manifests.git
-    path: manifests/nriy
+    path: manifests/omniamni
     targetRevision: HEAD
     directory:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: nriy
+    namespace: omniamni
