--- a/manifests/omniamni/omniamni.yaml
+++ b/manifests/omniamni/omniamni.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: motorcoach
+  name: omniamni
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: motorcoach
+      app.kubernetes.io/name: omniamni
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: motorcoach
+        app.kubernetes.io/name: omniamni
     spec:
       containers:
-        - name: motorcoach
-          image: harbor.ingtra.net/library/motorcoach:latest
+        - name: omniamni
+          image: harbor.ingtra.net/library/omniamni:latest
           imagePullPolicy: Always
           ports:
             - name: http
@@ -31,10 +31,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: motorcoach
+  name: omniamni
 spec:
   selector:
-    app.kubernetes.io/name: motorcoach
+    app.kubernetes.io/name: omniamni
   ports:
     - name: http
       port: 80
