disable kubernetes optimizer

--- a/clusters/k8s-na/argo-applications/amoro.yaml
+++ b/clusters/k8s-na/argo-applications/amoro.yaml
@@ -27,6 +27,9 @@ spec:
             url: jdbc:postgresql://postgresql.vd.ingtra.net:5432/amoro
             username: change
             password: me
+        optimizer:
+          kubernetes:
+            enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: amoro
