--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -91,6 +91,7 @@ spec:
             connector.name=iceberg
             iceberg.catalog.type=rest
             iceberg.rest-catalog.uri=https://amoro.ig.ingtra.net/api/iceberg/rest
+            iceberg.register-table-procedure.enabled=true
         additionalConfigProperties:
           - sql.default-catalog=iceberg
           - spill-enabled=true
