--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -102,6 +102,10 @@ spec:
           - query.client.timeout=20m
           - task.concurrency=4
           - task.max-worker-threads=8
+          - fs.native-s3.enabled=true
+          - fs.s3.endpoint=https://s3.sf.ingtra.net
+          - s3.aws-access-key=system
+          - s3.aws-secret-key=systemsecret
   destination:
     server: https://kubernetes.default.svc
     namespace: trino
