fix wrong config

--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -93,7 +93,7 @@ spec:
             iceberg.rest-catalog.uri=https://amoro.ig.ingtra.net/api/iceberg/rest
             iceberg.register-table-procedure.enabled=true
             fs.native-s3.enabled=true
-            fs.s3.endpoint=https://s3.sf.ingtra.net
+            s3.endpoint=https://s3.sf.ingtra.net
             s3.aws-access-key=system
             s3.aws-secret-key=systemsecret
         additionalConfigProperties:
