--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -93,6 +93,10 @@ spec:
             iceberg.rest-catalog.uri=https://amoro.ig.ingtra.net/api/iceberg/rest
             iceberg.rest-catalog.warehouse=iceberg
             iceberg.register-table-procedure.enabled=true
+            s3.endpoint=https://s3.sf.ingtra.net
+            s3.region=ingtranet
+            s3.aws-access-key=system
+            s3.aws-secret-key=systemsecret
             hive.s3.aws-access-key=system
             hive.s3.aws-secret-key=systemsecret
             hive.s3.endpoint=https://s3.sf.ingtra.net
