--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -93,12 +93,12 @@ spec:
             iceberg.rest-catalog.uri=https://amoro.ig.ingtra.net/api/iceberg/rest
             iceberg.rest-catalog.warehouse=iceberg
             iceberg.register-table-procedure.enabled=true
-            iceberg.rest-catalog.vended-credentials-enabled=true
-            fs.native-s3.enabled=true
-            s3.endpoint=https://s3.sf.ingtra.net
-            s3.region=us-west-2
-            s3.aws-access-key=system
-            s3.aws-secret-key=systemsecret
+            fs.native-s3.enabled=false
+            hive.s3.aws-access-key=system
+            hive.s3.aws-secret-key=systemsecret
+            hive.s3.endpoint=https://s3.sf.ingtra.net
+            hive.s3.ssl.enabled=true
+            hive.s3.signer-type=AWSS3V4SignerType
         additionalConfigProperties:
           - sql.default-catalog=iceberg
           - spill-enabled=true
