enable table registration

--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -93,6 +93,7 @@ spec:
             iceberg.nessie-catalog.uri=https://nessie.ig.ingtra.net/api/v2
             iceberg.nessie-catalog.ref=main
             iceberg.nessie-catalog.default-warehouse-dir=s3://iceberg
+            iceberg.register-table-procedure.enabled=true
             fs.native-s3.enabled=true
             s3.endpoint=https://s3.sf.ingtra.net
             s3.region=us-west-1
