--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -99,6 +99,16 @@ spec:
             s3.region=us-west-1
             s3.aws-access-key=system
             s3.aws-secret-key=systemsecret
+          iceberg_rest: |
+            connector.name=iceberg
+            fs.native-s3.enabled=true
+            s3.endpoint=https://s3.sf.ingtra.net
+            s3.region=us-west-1
+            s3.aws-access-key=system
+            s3.aws-secret-key=systemsecret
+            iceberg.catalog.type=rest
+            iceberg.rest-catalog.uri=https\://nessie.ig.ingtra.net/iceberg/
+            iceberg.rest-catalog.vended-credentials-enabled=true
         additionalConfigProperties:
           - sql.default-catalog=iceberg
           - spill-enabled=true
