--- a/clusters/k8s-na/argo-applications/nessie.yaml
+++ b/clusters/k8s-na/argo-applications/nessie.yaml
@@ -25,6 +25,15 @@ spec:
             name: nessie-db
             username: username
             password: password
+        catalog:
+          iceberg:
+            defaultWarehouse: s3://iceberg
+          # storage:
+          #   s3:
+          #     defaultOptions:
+          #       endpoint: https://s3.sf.ingtra.net
+
+          
   destination:
     server: https://kubernetes.default.svc
     namespace: nessie
