set default warehouse

--- a/clusters/k8s-na/argo-applications/nessie.yaml
+++ b/clusters/k8s-na/argo-applications/nessie.yaml
@@ -26,11 +26,12 @@ spec:
             username: username
             password: password
         advancedConfig:
-          nessie.catalog.warehouseDefaults.default-warehouse: s3://iceberg
           nessie.catalog.service.s3.default-options.region: us-west-2
           nessie.catalog.service.s3.default-options.access-key.name: system
           nessie.catalog.service.s3.default-options.access-key.secret: systemsecret
           nessie.catalog.service.s3.default-options.endpoint: https://s3.sf.ingtra.net
+          nessie.catalog.default-warehouse=iceberg
+          nessie.catalog.warehouses.iceberg.location=s3://iceberg
 
           
   destination:
