--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -109,6 +109,8 @@ spec:
             s3.endpoint=https\://s3.sf.ingtra.net
             s3.path-style-access=false
             s3.region=us-west-2
+            s3.aws-access-key=system
+            s3.aws-secret-key=systemsecret
         additionalConfigProperties:
           - sql.default-catalog=iceberg
           - spill-enabled=true
