--- a/clusters/k8s-na/argo-applications/nessie.yaml
+++ b/clusters/k8s-na/argo-applications/nessie.yaml
@@ -27,7 +27,7 @@ spec:
             - --jdbc-password
             - "$(JDBC_PASSWORD)"
             - --iceberg
-            - s3.access-key-id=system,s3.secret-access-key=systemsecret,s3.endpoint=https://s3.sf.ingtra.net
+            - s3.access-key-id=system,s3.secret-access-key=systemsecret,s3.endpoint=https://s3.sf.ingtra.net,s3.region=us-west-2
           env:
             - name: JDBC_USER
               valueFrom:
