--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -33,16 +33,16 @@ spec:
         coordinator:
           config:
             query:
-              maxMemoryPerNode: 4GB
+              maxMemoryPerNode: 2GB
           jvm:
-            maxHeapSize: 6G
+            maxHeapSize: 4G
             gcMethod:
               type: UseShenandoahGC
           additionalJVMConfig:
             - "-XX:ShenandoahGCHeuristics=compact"
           resources:
             limits:
-              memory: 8Gi
+              memory: 6Gi
           livenessProbe:
             initialDelaySeconds: 20
             periodSeconds: 10
@@ -56,6 +56,9 @@ spec:
             failureThreshold: 6
             successThreshold: 1
         worker:
+          config:
+            query:
+              maxMemoryPerNode: 4GB
           jvm:
             maxHeapSize: 6G
             gcMethod:
