--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -36,10 +36,11 @@ spec:
               maxMemoryPerNode: 2GB
           jvm:
             maxHeapSize: 4G
-          #   gcMethod:
-          #     type: UseShenandoahGC
-          # additionalJVMConfig:
-          #   - "-XX:ShenandoahGCHeuristics=adaptive"
+            gcMethod:
+              type: UseZGC
+          additionalJVMConfig:
+            - "-XX:+ZGenerational"
+            - "-XX:SoftMaxHeapSize=2G"
           resources:
             limits:
               memory: 6Gi
@@ -61,10 +62,11 @@ spec:
               maxMemoryPerNode: 4GB
           jvm:
             maxHeapSize: 6G
-          #   gcMethod:
-          #     type: UseShenandoahGC
-          # additionalJVMConfig:
-          #   - "-XX:ShenandoahGCHeuristics=adaptive"
+            gcMethod:
+              type: UseZGC
+          additionalJVMConfig:
+            - "-XX:+ZGenerational"
+            - "-XX:SoftMaxHeapSize=2G"
           resources:
             limits:
               memory: 8Gi
